fix inputs on firefox + :focus-visible

--- a/css/base/reset.css
+++ b/css/base/reset.css
@@ -3,6 +3,10 @@
     line-height: 1.6;
 }
 
+*:focus:not(:focus-visible) {
+    outline: none;
+}
+
 .noDisplay {
     display: none; /*Temporal*/
 }
