--- a/css/components/forms.css
+++ b/css/components/forms.css
@@ -15,6 +15,8 @@ input:not([type="checkbox"]):not([type="submit"]), textarea, select {
     background-color: var(--color-white);
     padding-left: 8px;
     padding-right: 8px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 input[disabled], textarea[disabled] {
